--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   --gray-border: #2f3336;
   --gray-dark-border: #161818;
   --gray: #828388;
-  --text-color: #dbddde;
+  --text-color: #e2e5e6;
 }
 
 /* flex classes------------------------ */
@@ -91,7 +91,7 @@ header {
 
 .tabs-section {
   width: 100%;
-  height: 70px;
+  height: 60px;
   position: fixed;
   background-color: black;
   bottom: 0px;
