added more posts

--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@
   justify-content: space-between;
 }
 
+.flex-start {
+  display: flex;
+  justify-content: start;
+}
+
 body {
   color: white;
   font-weight: 700;
@@ -44,6 +49,10 @@ header {
   border-bottom: 1px solid var(--gray-border);
   height: 55px;
   background-color: black;
+}
+
+.feed { 
+  margin-bottom: 4rem;
 }
 
 .logo {
@@ -149,7 +158,7 @@ header {
 
 .post-text-container p {
   padding-top: 2px;
-  font-size: 1rem;
+  font-size: 0.95rem;
   font-weight: 400;
   color: var(--text-color);
   word-spacing: -1px;
@@ -167,6 +176,24 @@ header {
   font-size: 0.8rem;
   font-weight: 400;
   letter-spacing: 0.5px;
+}
+
+.post-images {
+  margin-top: 0.5rem;
+  border: 2px solid var(--gray-border);
+  border-radius: 1.5rem;
+  width: 100%;
+  max-width: 600px;
+}
+
+span.showmore {
+  color: var(--blue);
+  cursor: pointer;
+}
+
+.img-size-fix {
+  background-size: cover;
+  max-height: 400px;
 }
 
 /* media queries-------------------------------------  */
@@ -199,5 +226,10 @@ header {
 @media (max-width: 420px) {
   .community {
     display: none;
+  }
+
+  .flex-wrap {
+  display: flex;
+  flex-wrap: wrap;
   }
 }
