--- a/style.css
+++ b/style.css
@@ -116,7 +116,6 @@ header {
   display: block;
   min-width: 40px;
   height: 40px;
-  background: url("https://pbs.twimg.com/profile_images/1597246024522891264/HC5EAQDX_400x400.jpg");
   background-size: cover;
   border-radius: 50%;
   margin: 0.4rem 0.6rem;
@@ -181,12 +180,12 @@ header {
 .post-images {
   margin-top: 0.5rem;
   border: 2px solid var(--gray-border);
-  border-radius: 1.5rem;
+  border-radius: 0.8rem;
   width: 100%;
   max-width: 600px;
 }
 
-span.showmore {
+span.hash {
   color: var(--blue);
   cursor: pointer;
 }
