improvement for bigger screens

--- a/style.css
+++ b/style.css
@@ -13,10 +13,10 @@
   --gray-border: #2f3336;
   --gray-dark-border: #202222;
   --gray: #828388;
-  --text-color: #e2e5e6;
+  --text-color: #d9dbdc;
   --green: #00ba7c;
-  --red:rgb(255, 92, 92);
-  --orange:  orange;
+  --red: rgb(255, 92, 92);
+  --orange: orange;
 }
 
 /* flex classes------------------------ */
@@ -43,20 +43,17 @@ body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-header{
-  position: sticky;
-  top: 0px;
-}
-
 header {
   border-bottom: 1px solid var(--gray-border);
   height: 55px;
   background-color: black;
   background: rgba(0, 0, 0, 0.8);
   backdrop-filter: blur(30px);
+  position: sticky;
+  top: 0px;
 }
 
-.feed { 
+.feed {
   margin-bottom: 4rem;
 }
 
@@ -70,7 +67,7 @@ header {
   width: 2rem;
   border-radius: 50%;
   position: absolute;
-  top: 1rem;
+  top: 0.8rem;
   left: 1rem;
 }
 
@@ -235,26 +232,35 @@ h3 {
   box-shadow: 0px 0px 100px 3px var(--blue);
 }
 
-.comments-icon:hover, .comments-icon ~ span:hover, .views-icon:hover, .home-icon:hover, .msg-icon:hover {
+.comments-icon:hover,
+.comments-icon ~ span:hover,
+.views-icon:hover,
+.home-icon:hover,
+.msg-icon:hover {
   fill: var(--blue);
   color: var(--blue);
   box-shadow: 0px 0px 100px 10px var(--blue);
 }
 
-.retweet-icon:hover, .retweet-icon ~ span:hover, .search-icon:hover, .community-icon:hover {
+.retweet-icon:hover,
+.retweet-icon ~ span:hover,
+.search-icon:hover,
+.community-icon:hover {
   fill: var(--green);
   color: var(--green);
   box-shadow: 0px 0px 120px 15px var(--green);
 }
 
-.like-icon:hover, .like-icon ~ span:hover, .noti-icon:hover {
+.like-icon:hover,
+.like-icon ~ span:hover,
+.noti-icon:hover {
   fill: var(--red);
   color: var(--red);
   box-shadow: 0px 0px 70px 5px var(--red);
 }
 
 .share-icon:hover {
-  fill:var(--orange);
+  fill: var(--orange);
   box-shadow: 0px 0px 70px 5px orange;
 }
 
@@ -267,18 +273,59 @@ h3 {
   background-color: #101010;
 }
 
-
 /* media queries-------------------------------------  */
 
+/* tablets-------- */
 @media (min-width: 780px) {
-  .post-text-container p, .post-username-container span {
+  .post-text-container p,
+  .post-username-container span {
     font-size: 1rem;
   }
 }
 
-
-
+/* big screens------- */
 @media (min-width: 1024px) {
+  .new-post-button {
+    display: none;
+  }
+
+  h1 {
+    color: var(--text-color);
+    font-size: 1.4rem;
+    margin: 0.8rem 0.8rem;
+  }
+
+  .pfp {
+    display: none;
+  }
+
+  .logo {
+    display: none;
+  }
+
+  .header {
+    height: 55px;
+    background-color: black;
+    position: sticky;
+    top: 0px;
+    border-bottom: 1px solid var(--gray-border);
+  }
+
+  .home {
+    padding-top: 0.1rem;
+    position: sticky;
+    top: 0px;
+  }
+
+  .home {
+    background: rgba(0, 0, 0, 0.9);
+    backdrop-filter: blur(5px);
+  }
+
+  .home-tabs, .header {
+    background: rgba(0, 0, 0, 0);
+  }
+
   main {
     height: 100vh;
   }
@@ -287,6 +334,12 @@ h3 {
     border-right: 1px solid var(--gray-border);
     border-left: 1px solid var(--gray-border);
     order: 2;
+  }
+
+  .logo-container,
+  .following-tabs-container,
+  header {
+    display: none;
   }
 
   .tabs-section {
@@ -304,13 +357,23 @@ h3 {
   }
 }
 
+@media (max-width: 1024px) {
+  .header-top {
+    display: none;
+  }
+
+  .home {
+    display: none;
+  }
+}
+
 @media (max-width: 420px) {
   .community {
     display: none;
   }
 
   .flex-wrap {
-  display: flex;
-  flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
   }
 }
