add: right side

--- a/style.css
+++ b/style.css
@@ -5,11 +5,13 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  overscroll-behavior: none;
 }
 
 /* color variables---------------------- */
 :root {
   --blue: #1d9bf0;
+  --gray-containers: #202327;
   --gray-border: #2f3336;
   --gray-dark-border: #202222;
   --gray: #828388;
@@ -226,7 +228,257 @@ h3 {
   margin: 0 auto;
 }
 
-/* hover states --------------------------------------- */
+/* media queries-----------------------------------------------------------------  */
+
+/* tablets-------------------------------------------------------- */
+@media (min-width: 780px) {
+  .post-text-container p,
+  .post-username-container span {
+    font-size: 1rem;
+  }
+}
+
+/* big screens------------------------------------------------- */
+@media (min-width: 1024px) {
+  .new-post-button {
+    display: none;
+  }
+
+  .home h1 {
+    color: var(--text-color);
+    font-size: 1.4rem;
+    margin: 0.8rem 0.8rem;
+  }
+
+  .pfp {
+    display: none;
+  }
+
+  .logo {
+    display: none;
+  }
+
+  .header {
+    height: 55px;
+    background-color: black;
+    position: sticky;
+    top: 0px;
+    border-bottom: 1px solid var(--gray-border);
+  }
+
+  .home {
+    padding-top: 0.1rem;
+    position: sticky;
+    top: 0px;
+  }
+
+  .home {
+    background: rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(5px);
+  }
+
+  .home-tabs, .header {
+    background: rgba(0, 0, 0, 0);
+  }
+
+  main {
+    height: 100vh;
+  }
+
+  .feed {
+    border-right: 1px solid var(--gray-border);
+    border-left: 1px solid var(--gray-border);
+    order: 2;
+    margin-bottom: 0;
+  }
+
+  .logo-container,
+  .following-tabs-container,
+  header {
+    display: none;
+  }
+
+  .tabs-section {
+    order: 1;
+    position: relative;
+  }
+
+  .right {
+    order: 3;
+  }
+
+  main {
+    display: grid;
+    grid-template-columns: 1fr 1.5fr 1.2fr;
+  }
+
+  .container-right {
+    padding-left: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    position: sticky;
+    top: -450px;
+  }
+
+  .container-search {
+    background-color: var(--gray-containers);
+    width: 23%;
+    border-radius: 200px;
+    padding-left: 1.5rem;
+  }
+
+  .search-wrapper {
+    padding: 0.5rem 0px;
+    width: 100%;
+    position: fixed;
+    background-color: black;
+  }
+
+  .search-bar {
+    background-color: var(--gray-containers);
+    height: 45px;
+    color: rgb(191, 191, 191);
+    border-radius: 200px;
+    border: none;
+    font-size: 0.91rem;
+    font-family: inherit;
+    font-weight: 400;
+    padding: 0px 0px 2px 10px;
+    cursor: pointer;
+  }
+
+  .Premium {
+    margin-top: 4rem;
+  }
+  
+  .card {
+    padding: 1rem 1rem;
+    width: 75%;
+    background-color: rgb(22, 22, 22);
+    border-radius: 1rem;
+  }
+
+  .Premium > h1 {
+    padding-bottom: 0.5rem;
+    color: white;
+    font-size: 1.5vw;
+  }
+
+  .Premium p {
+    font-weight: 700;
+    font-size: 1vw;
+    color: var(--text-color);
+  }
+
+  .subscribe {
+    margin-top: 0.6rem;
+    width: 110px;
+  }
+
+  .explore {
+    display: flex;
+    flex-direction: column;
+    padding: 0.8rem 0;
+  }
+
+  .explore h1 {
+    padding: 0.8rem 0 0.4rem 1.4rem;
+  }
+
+  .container-explore {
+    padding: 1rem 1.4rem;
+  }
+
+  .container-explore h5{
+    font-size: 1rem;
+  }
+
+  .container-explore span{
+    font-size: 0.8rem;
+    font-weight: 400;
+    color: gray;
+  }
+
+  .button {
+    cursor: pointer;
+    background-color: var(--blue);
+    font-family: inherit;
+    border-radius: 100px;
+    padding-bottom: 2px;
+    border: none;
+    height: 2.3rem;
+    font-size: 0.95rem;
+    font-weight: 700;
+    color: white;
+  }
+
+  h6.showmore {
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 400;
+    color: var(--blue);
+    padding: 0 0 0.5rem 1rem;
+  }
+
+  .container-follow {
+    margin-top: 1rem;
+  }
+
+  .container-follow img {
+    border-radius: 50%;
+    background-repeat: none;
+    background-size: cover;
+    height: 40px;
+    width: 40px;
+  }
+
+  .container-follow span {
+    padding: 0;
+  }
+
+  button.follow {
+    background-color: white;
+    color: black;
+    width: 90px;
+  }
+
+  .container-terms-of-service {
+    display: grid;
+    grid-template-columns: 100px 100px 100px;
+    gap: 0.4rem;
+    padding-left: 1rem;
+  }
+
+  .container-terms-of-service span {
+    font-size: 0.8rem;
+    font-weight:400;
+    color: #71767b;
+  }
+}
+
+@media (max-width: 1024px) {
+  .header-top {
+    display: none;
+  }
+
+  .home {
+    display: none;
+  }
+}
+
+@media (max-width: 420px) {
+  .community {
+    display: none;
+  }
+
+  .flex-wrap {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+/* hover states --------------------------------------------------------- */
 
 .new-post-button:hover {
   box-shadow: 0px 0px 100px 3px var(--blue);
@@ -273,107 +525,6 @@ h3 {
   background-color: #101010;
 }
 
-/* media queries-------------------------------------  */
-
-/* tablets-------- */
-@media (min-width: 780px) {
-  .post-text-container p,
-  .post-username-container span {
-    font-size: 1rem;
-  }
-}
-
-/* big screens------- */
-@media (min-width: 1024px) {
-  .new-post-button {
-    display: none;
-  }
-
-  h1 {
-    color: var(--text-color);
-    font-size: 1.4rem;
-    margin: 0.8rem 0.8rem;
-  }
-
-  .pfp {
-    display: none;
-  }
-
-  .logo {
-    display: none;
-  }
-
-  .header {
-    height: 55px;
-    background-color: black;
-    position: sticky;
-    top: 0px;
-    border-bottom: 1px solid var(--gray-border);
-  }
-
-  .home {
-    padding-top: 0.1rem;
-    position: sticky;
-    top: 0px;
-  }
-
-  .home {
-    background: rgba(0, 0, 0, 0.9);
-    backdrop-filter: blur(5px);
-  }
-
-  .home-tabs, .header {
-    background: rgba(0, 0, 0, 0);
-  }
-
-  main {
-    height: 100vh;
-  }
-
-  .feed {
-    border-right: 1px solid var(--gray-border);
-    border-left: 1px solid var(--gray-border);
-    order: 2;
-  }
-
-  .logo-container,
-  .following-tabs-container,
-  header {
-    display: none;
-  }
-
-  .tabs-section {
-    order: 1;
-    position: relative;
-  }
-
-  .right {
-    order: 3;
-  }
-
-  main {
-    display: grid;
-    grid-template-columns: 1fr 1.4fr 1.3fr;
-  }
-}
-
-@media (max-width: 1024px) {
-  .header-top {
-    display: none;
-  }
-
-  .home {
-    display: none;
-  }
-}
-
-@media (max-width: 420px) {
-  .community {
-    display: none;
-  }
-
-  .flex-wrap {
-    display: flex;
-    flex-wrap: wrap;
-  }
+.container-explore:hover {
+  background-color: #212121;
 }
